squash, old 1c468c8c94989f33fdbb239a47ab0831b97ffb84

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -197,6 +197,7 @@ jobs:
                 run: |
                     cd /src \
                     && ./build.sh --configure \
+                       -DWITH_ANTIGO=1 \
                        -DBUILD_UNIT_TESTS=OFF \
                        -DBUILD_GAMEMODE=ON \
                        -DOFFLINE_MODE=OFF \
@@ -219,7 +220,7 @@ jobs:
                     -u skymp
                 run: |
                     cd /src \
-                    && ./build.sh --build
+                    && ./build.sh --build --target=skymp5-server
 
           - name: Deploy
             env:
